--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
     async function initMap() {
       map = new google.maps.Map(document.getElementById("map"), {
-        center: { lat: 46.5833, lng: 25.8000 }, // Gyergyószentmiklós
-        zoom: 12
+        center: { lat: 46.72292, lng: 25.60055 }, // Gheorgheni
+        zoom: 20
       });
 
       const vehicles = await fetchVehicles();
