--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
     async function initMap() {
       map = new google.maps.Map(document.getElementById("map"), {
         center: { lat: 46.72292, lng: 25.60055 }, // Gheorgheni
-        zoom: 12
+        zoom: 12,
+        //  mapTypeControl: false, 
+        zoomControl: false,
+        // streetViewControl: false, 
+        fullscreenControl: false
       });
 
       const vehicles = await fetchVehicles();
