map type control

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       map = new google.maps.Map(document.getElementById("map"), {
         center: { lat: 46.72292, lng: 25.60055 }, // Gheorgheni
         zoom: 12,
-        //  mapTypeControl: false, 
+        mapTypeControl: false,
         zoomControl: false,
         // streetViewControl: false, 
         fullscreenControl: false
