--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
     function getMarkerIcon(status) {
       if (status === 'Áll') {
         return {
-          url: "https://upload.wikimedia.org/wikipedia/commons/f/f9/Stop.png",
+          url: "https://cdn-icons-png.flaticon.com/512/685/685352.png",
           scaledSize: new google.maps.Size(32, 32)
         };
       }
       return {
-        url: "https://svgsilh.com/svg/2386838.svg",
+        url: 'https://cdn-icons-png.flaticon.com/512/743/743131.png',
         scaledSize: new google.maps.Size(32, 32)
       };
     }
