--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
     function getMarkerIcon(status) {
       if (status === 'Áll') {
         return {
-          url: "https://cdn-icons-png.flaticon.com/512/685/685352.png",
+          url: "https://raw.githubusercontent.com/ambrustzoltan/vehicle-tracking-map/refs/heads/main/assets/stop.png",
           scaledSize: new google.maps.Size(32, 32)
         };
       }
       return {
-        url: 'https://cdn-icons-png.flaticon.com/512/743/743131.png',
+        url: 'https://raw.githubusercontent.com/ambrustzoltan/vehicle-tracking-map/refs/heads/main/assets/lorry.png',
         scaledSize: new google.maps.Size(32, 32)
       };
     }
